# pygenpass

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  contributing.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  main.yml
genpass/: __init__.py  database.py  password.py
pygenpass/: __init__.py  database.py  password.py
