[metadata]
name = pygenpass
description = Pygenpass - Command Line Password Generator and Manager Tool
home-page = https://github.com/paint-it/pygenpass
author = Mayuri Lahane
author-email = mayurilahane1998@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT License
license-file = LICENSE
keywords =
    clitool
    passwordmanager
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Topic :: Internet
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >= 3.6
setup_requires = setuptools_scm
install_requires =
    beautifultable
    click
    diceware
    termcolor

[options.entry_points]
console_scripts =
    pygenpass = pygenpass.__init__:main

[flake8]
max_line_length = 100
